Fix text spacing inconsistency

--- a/css/global.css
+++ b/css/global.css
@@ -59,7 +59,6 @@ h6 {
 p {
   font-weight: 500;
   font-size: 1rem;
-  margin-bottom: 25px;
 }
 p a {
   font-weight: 600;
